chore(build): configurar archivo pom.xml para el funcionamiento del proyecto con Maven